fix: buttons to not show highlight color on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,11 @@ html {
   scroll-behavior: smooth;
 }
 
+* {
+  -webkit-tap-highlight-color: transparent;
+  -webkit-touch-callout: none;
+}
+
 /* width */
 ::-webkit-scrollbar {
   width: 0;
@@ -40,7 +45,7 @@ html {
   }
 
   .navMenuIcon {
-    @apply m-auto w-5 lg:mr-2 lg:w-6 lg:mr-4;
+    @apply m-auto w-5 lg:mr-3 lg:w-6;
   }
 
   .loginRegLabel {
